k8s-files/app-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mlflow-svc
  name: mlflow-svc
spec:
  type: NodePort
  ports:
  - name: "mlflow-svc"
    port: 5000
    targetPort: 5000
  selector:
    app: mlflow
